fixed some links

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 			<div id="left">
 				<h3>User styles</h3>
 				<p>Style sheets that modify a website's appearance. Made for Firefox, and to be used with Stylish. <a href="https://github.com/hdni/user-styles">See on Github</a></p>
-					<a href="https://github.com/hdni/user-styles/4chan_clean.css">4chan Clean</a><br>
-					<a href="https://github.com/hdni/user-styles/4chan_ribbon.css">4chan Ribbon</a><br>
-					<a href="https://github.com/hdni/user-styles/anandtech.css">AnandTech</a>
+					<a href="https://github.com/hdni/user-styles/blob/master/4chan_clean.css">4chan Clean</a><br>
+					<a href="https://github.com/hdni/user-styles/blob/master/4chan_ribbon.css">4chan Ribbon</a><br>
+					<a href="https://github.com/hdni/user-styles/blob/master/anandtech.css">AnandTech</a>
 			</div>
 
 			<div id="right">
@@ -98,9 +98,9 @@
 			<div id="right">
 				<h3>Dotfiles</h3>
 				<p>Various configuration files and scripts, mainly for GNU/Linux systems. <a href="https://github.com/hdni/dotfiles">See on Github</a></p>
-					<a href="https://github.com/hdni/dotfiles/ncmpcpp-config">ncmpcpp</a><br>
-					<a href="https://github.com/hdni/dotfiles/.tmux.conf">tmux</a><br>
-					<a href="https://github.com/hdni/dotfiles/infinality-settings.sh">infinality</a><br>
+					<a href="https://github.com/hdni/dotfiles/blob/master/ncmpcpp-config">ncmpcpp</a><br>
+					<a href="https://github.com/hdni/dotfiles/blob/master/ncmpcpp-config">tmux</a><br>
+					<a href="https://github.com/hdni/dotfiles/blob/master/infinality-settings.sh">infinality</a><br>
 					<p>and more.</p>
 			</div>
 		</div>
