fixed tmux link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<h3>Dotfiles</h3>
 				<p>Various configuration files and scripts, mainly for GNU/Linux systems. <a href="https://github.com/hdni/dotfiles">See on Github</a></p>
 					<a href="https://github.com/hdni/dotfiles/blob/master/ncmpcpp-config">ncmpcpp</a><br>
-					<a href="https://github.com/hdni/dotfiles/blob/master/ncmpcpp-config">tmux</a><br>
+					<a href="https://github.com/hdni/dotfiles/blob/master/.tmux.conf">tmux</a><br>
 					<a href="https://github.com/hdni/dotfiles/blob/master/infinality-settings.sh">infinality</a><br>
 					<p>and more.</p>
 			</div>
