--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="fleche">
 			<div class="desc">
 				<h1>Flèche</h1>
-				<p>A theme inspired by flat design for GNOME Shell, GTK 3, Mutter, GNOME Terminal, and Firefox. <a href="https://github.com/hdni/Fleche">See on Github</a></p>
+				<p>A theme for GNOME Shell, GTK 3, Mutter, GNOME Terminal, and Firefox. <a href="https://github.com/hdni/Fleche">See on Github</a></p>
 			</div>
 			<div id="left">
 			<div class="gnome">
@@ -48,6 +48,21 @@
 				</a>
 			</div>
 			</div>
+			</div>
+		</div>
+
+		<div id="flex">
+			<div id="right">
+				<div class="preview">
+				<a href="assets/flex_preview.png" target="_blank">
+					<img src="assets/flex_preview.png">
+					<h2><span>View full image</span></h2>
+				</a>
+				</div>
+			</div>
+			<div id="left">
+				<h3>Flex</h3>
+				<p>A modified version of Flèche closer to what I <a href="assets/flex_mockup.png">originally</a> had in mind. <a href="https://github.com/hdni/Flex">See on Github</a></p>
 			</div>
 		</div>
 
