added phosphene preview

--- a/index.html
+++ b/index.html
@@ -18,10 +18,23 @@
 	</div>
 
 	<div id="main">
+		<div id="phosphene">
+			<div class="desc">
+				<h1>Phosphene</h1>
+				<p>A flat theme for GNOME Shell, GTK 3, Mutter, and Firefox.<br><a href="https://github.com/hdni/Phosphene">See on Github</a></p>
+			</div>
+			<div class="preview">
+				<a href="assets/phosphene_preview.png" target="_blank">
+					<img src="assets/phosphene_preview.png">
+					<h2><span>View full image</span></h2>
+				</a>
+			</div>
+		</div>
+
 		<div id="fleche">
 			<div class="desc">
 				<h1>Flèche</h1>
-				<p>A theme for GNOME Shell, GTK 3, Mutter, GNOME Terminal, and Firefox. <a href="https://github.com/hdni/Fleche">See on Github</a></p>
+				<p>Another theme for GNOME Shell, GTK 3, Mutter, GNOME Terminal, and Firefox. <a href="https://github.com/hdni/Fleche">See on Github</a></p>
 			</div>
 			<div id="left">
 			<div class="gnome">
@@ -115,7 +128,7 @@
 				<p>Various configuration files and scripts, mainly for GNU/Linux systems. <a href="https://github.com/hdni/dotfiles">See on Github</a></p>
 					<a href="https://github.com/hdni/dotfiles/blob/master/ncmpcpp-config">ncmpcpp</a><br>
 					<a href="https://github.com/hdni/dotfiles/blob/master/.tmux.conf">tmux</a><br>
-					<a href="https://github.com/hdni/dotfiles/blob/master/infinality-settings.sh">infinality</a><br>
+					<a href="https://github.com/hdni/dotfiles/blob/master/.vimrc">vim</a><br>
 					<p>and more.</p>
 			</div>
 		</div>
