--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 			<div id="left">
 				<h3>User styles</h3>
 				<p>Style sheets that modify a website's appearance. Made for Firefox, and to be used with Stylish. <a href="https://github.com/hdni/user-styles">See on Github</a></p>
+					<a href="https://github.com/hdni/user-styles/blob/master/4chan_v3.css">4chan v3</a><br>
 					<a href="https://github.com/hdni/user-styles/blob/master/4chan_clean.css">4chan Clean</a><br>
 					<a href="https://github.com/hdni/user-styles/blob/master/4chan_ribbon.css">4chan Ribbon</a><br>
 					<a href="https://github.com/hdni/user-styles/blob/master/anandtech.css">AnandTech</a>
